force-app/main/default/objects/Location__c/fields/Target_Working_Hours_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Target_Working_Hours_per_Day__c</fullName>
    <label>Target Working Hours per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>