force-app/main/default/objects/Location__c/fields/Target_Working_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Target_Working_Hours_Per_Week__c</fullName>
    <formula>(
    IF(INCLUDES(Target_Working_Days__c, &apos;Sun&apos;), 1, 0)
        + IF(INCLUDES(Target_Working_Days__c, &apos;Mon&apos;), 1, 0)
        + IF(INCLUDES(Target_Working_Days__c, &apos;Tue&apos;), 1, 0)
        + IF(INCLUDES(Target_Working_Days__c, &apos;Wed&apos;), 1, 0)
        + IF(INCLUDES(Target_Working_Days__c, &apos;Thu&apos;), 1, 0)
        + IF(INCLUDES(Target_Working_Days__c, &apos;Fri&apos;), 1, 0)
        + IF(INCLUDES(Target_Working_Days__c, &apos;Sat&apos;), 1, 0)
) * Target_Working_Hours_per_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Working Hours per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>