force-app/main/default/objects/Location__c/fields/Vacation_Approval_Process_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Approval_Process_API_Name__c</fullName>
    <label>Vacation Approval Process API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>