force-app/main/default/objects/Location__c/fields/Vacation_Days_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Days_per_Year__c</fullName>
    <label>Vacation Days per Year</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>